--- a/ensembl.config
+++ b/ensembl.config
@@ -1,14 +1,15 @@
 #!/bin/csh -f
 
 #
-# NCBI configuration file
+# ENSEMBL configuration file
 #
 
 cd `dirname $0` && source ./Configuration
 
-setenv MAPPINGDATAFILE	/mgi/all/wts_projects/7600/7655/DataLoad
+setenv MAPPINGDATADIR   /mgi/all/wts_projects/7600/7655/DataLoad
+setenv MAPPINGDATAFILE  ${MAPPINGDATADIR}
 setenv MAPPINGMODE	preview|incremental|full
-setenv JNUM		J:81858
+setenv JNUM		J:78475
 setenv EXPERIMENTTYPE	"TEXT-Physical Mapping"
 setenv CREATEDBY	yz
 
